--- a/1.- useOutletContext, cloudinary, routeProtect/src/components/Nav.css
+++ b/1.- useOutletContext, cloudinary, routeProtect/src/components/Nav.css
@@ -51,17 +51,22 @@ li:has(> a.active) {
 
 li:has(> a.logout) {
   color: white;
-  background-color: rgba(101, 0, 81, 0.282);
+  background-color: rgba(219, 60, 187, 0.578);
   opacity: 1;
   box-shadow: rgba(255, 255, 255, 0.516) 0px 2px 8px 0px;
   size: 220%;
+  width: 50px;
+  height: 50px;
+  padding: 10px;
+  border-radius: 50%;
 }
 
 li:has(> a.logout):hover {
-  background-color: rgba(101, 0, 81, 0.883);
+  background-color: rgba(207, 28, 171, 0.883);
 
   box-shadow: rgba(255, 255, 255, 0.516) 0px 2px 8px 0px;
   size: 240%;
+  
 }
 .avatar{
   width: 80px;
@@ -76,5 +81,17 @@ li:has(> a.logout):hover {
   display:flex;
   justify-content: center;
   align-items: center;
+}
 
+.iconLogout{
+  width: 80%;
+  margin-top: 5px;
+  filter:hue-rotate(180deg) brightness(500%);
+
+}
+
+.titleUser{
+  margin-left: 20px;
+  font-family: "Rubik Vinyl", cursive;  
+  font-size: 2rem;
 }
