cambios por error en la api

--- a/1.- useOutletContext, cloudinary, routeProtect/src/App.css
+++ b/1.- useOutletContext, cloudinary, routeProtect/src/App.css
@@ -15,3 +15,11 @@
   font-size: 6rem;
   font-family: "Rubik Vinyl", cursive;
 }
+
+.tituloWhite {
+  color: white;
+}
+
+.loading {
+  color: white;
+}
